# HAProxy-Azure-Dataplane

./: .gitignore  AZURE_PERMISSIONS.md  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
haproxy_azure_discovery/: __main__.py  cli.py  config.py  daemon.py  exceptions.py  logging_config.py
haproxy_azure_discovery/discovery/: azure_client.py  change_detector.py  models.py  tag_filter.py
haproxy_azure_discovery/haproxy/: dataplane_client.py  reconciler.py  slot_allocator.py
haproxy_cloud_discovery/: __init__.py  cli.py  config.py  daemon.py  exceptions.py  logging_config.py
haproxy_cloud_discovery/discovery/: __init__.py  aws_client.py  azure_client.py  change_detector.py  models.py
haproxy_cloud_discovery/haproxy/: dataplane_client.py  reconciler.py  transaction.py
rpm/: haproxy-azure-discovery.spec  haproxy-cloud-discovery.spec
systemd/: haproxy-azure-discovery.service  haproxy-cloud-discovery.service
tests/: test_aws_client.py  test_change_detector.py  test_cli.py  test_config.py  test_dataplane_client.py  test_logging_config.py  test_models.py  test_reconciler.py  test_slot_allocator.py  test_tag_filter.py  test_transaction.py
