[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haproxy-cloud-discovery"
version = "0.2.0"
description = "Multi-cloud Service Discovery Daemon for HAProxy via the Dataplane API"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.15.0",
    "azure-mgmt-compute>=31.0.0",
    "azure-mgmt-network>=25.0.0",
]
aws = [
    "boto3>=1.34.0",
]
all = [
    "azure-identity>=1.15.0",
    "azure-mgmt-compute>=31.0.0",
    "azure-mgmt-network>=25.0.0",
    "boto3>=1.34.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "responses>=0.25.0",
    "moto[ec2,autoscaling]>=5.0.0",
]

[project.scripts]
haproxy-cloud-discovery = "haproxy_cloud_discovery.cli:main"

[tool.setuptools.packages.find]
include = ["haproxy_cloud_discovery*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
